--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,35 @@
-# Gitignore for Perl 6 (http://www.perl6.org)
-# As part of https://github.com/github/gitignore
+!Build/
+.last_cover_stats
+/META.yml
+/META.json
+/MYMETA.*
+*.o
+*.pm.tdy
+*.bs
 
-# precompiled files
-.precomp
-lib/.precomp
+# Devel::Cover
+cover_db/
 
+# Devel::NYTProf
+nytprof.out
+
+# Dizt::Zilla
+/.build/
+
+# Module::Build
+_build/
+Build
+Build.bat
+
+# Module::Install
+inc/
+
+# ExtUtils::MakeMaker
+/blib/
+/_eumm/
+/*.gz
+/Makefile
+/Makefile.old
+/MANIFEST.bak
+/pm_to_blib
+/*.zip
